add mock tweets sentiment analysis

--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "chart.js": "^4.3.0",
     "dotenv": "^16.1.3",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-query": "^3.39.3",
-    "react-redux": "^8.0.5",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
